NPS & Weather API calls complete

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         integrity="sha384-SI27wrMjH3ZZ89r4o+fGIJtnzkAnFs3E4qz9DIYioCQ5l9Rd/7UAa8DHcaL8jkWt" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.2.4/dist/css/uikit.min.css" />
     <link rel="stylesheet" href="./assets/css/style.css" type="text/css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 </head>
 
 <body>
@@ -53,8 +54,7 @@
     </div>
         <script src="https://cdn.jsdelivr.net/npm/uikit@3.2.4/dist/js/uikit.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/uikit@3.2.4/dist/js/uikit-icons.min.js"></script>
-        <script src="./assets/js/jquery-3.4.1.js" type="text/js"></script>
-        <script src="./assets/js/src.js" type="text/js"></script>
+        <script src="javascript.js"></script>
 </body>
 
 </html>
