--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         <script src="https://cdn.jsdelivr.net/npm/uikit@3.2.4/dist/js/uikit.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/uikit@3.2.4/dist/js/uikit-icons.min.js"></script>
         <script src="./assets/js/jquery-3.4.1.js" type="text/js"></script>
-    
+        <script src = javascript.js></script>
         <script src="./assets/js/src.js" type="text/js"></script>
    
 
