Fixed the column formatting issues in the top navbar

--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
             <nav class="navbar m-0 p-0">
                     <div class = "uk-background-cover uk-margin-remove" style = "background-image: url(./assets/images/oak-wood-header.jpg); width: 100%; height: 65px;">
                  <div class = "row my-0" > 
-                <div class="col-4">
+                <div class="col-6">
                     <input type="text" id="searchLocations" class =  "uk-input uk-width-small" placeholder="search" style = "width: 200px; margin-left: 5px; margin-top: 10px;">
                     <button id="btn-submit" class ="uk-button uk-button-default uk-button-small" style = "background-color: saddlebrown; color:sandybrown; margin-top: 10px;" >Submit</button>
                     <input type="date" id="date" class =  "uk-input" style = "width: 200px; margin-top: 10px;">
                 </div>
-                <div class="col-4">
+                <div class="col-3">
                     <button id="btn-campingTrip" class = "uk-button uk-button-default uk-button-small" style = "background-color: saddlebrown; color:sandybrown; margin-top: 15px; margin-left: 190px;">Camping Trip</button>
                 </div>
-                <div class="col-4"><button id="btn-hikingTrip" class ="uk-button uk-button-default uk-button-small" style = "background-color: saddlebrown; color:sandybrown; margin-top: 15px;">Hiking Trip</button></div>
+                <div class="col-3"><button id="btn-hikingTrip" class ="uk-button uk-button-default uk-button-small" style = "background-color: saddlebrown; color:sandybrown; margin-top: 15px;">Hiking Trip</button></div>
             </div> 
             </div>
             </nav>
@@ -39,7 +39,7 @@
                   
 
                     <div class="row justify-content-center">
-                            <div class="uk-card uk-card-default" style = "width: 1000px; margin: 30px;">
+                            <div class="uk-card uk-card-default" style = "width: 1000px; margin: 30px; background-color:rgb(228, 171, 97); border-style: solid; border-width: 10px; border-color:saddlebrown">
                                 <div class = "uk-card-title">
                                     <h1 id = "parkname" style = "margin-top: 20px; margin-left: 30px;">NAME</h1>
                                 </div> 
