--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div id="slides">
                   
 
-                    <div class="row justify-content-center">
+                    <div class="row justify-content-center" id = "slideRow">
                             <div class="uk-card uk-card-default" style = "width: 1000px; margin: 30px;">
                                 <div class = "uk-card-title">
                                     <h1 id = "parkname" style = "margin-top: 20px; margin-left: 30px;">NAME</h1>
