Slide builder update

--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
             
         <div class="container mainBody">
             <div id="slides">
-                  
+                  <div><p>hello</p></div>
+                  <div><p>world</p></div>
                 <section>
                 </section>
 
