--- a/index.html
+++ b/index.html
@@ -36,29 +36,39 @@
             
         <div class="container mainBody">
             <div id="slides">
-
-                  <div><p>hello</p></div>
-                  <div><p>world</p></div>
-                <section>
-                </section>
-
-                  
-
-                    <div class="row justify-content-center">
-                            <div class="uk-card uk-card-default" style = "width: 1000px; margin: 30px; background-color:rgb(228, 171, 97); border-style: solid; border-width: 10px; border-color:saddlebrown">
-                                <div class = "uk-card-title">
-                                    <h1 id = "parkname" style = "margin-top: 20px; margin-left: 30px;">NAME</h1>
-                                </div> 
-                                    <img id = "parkpic"></img>
-                                <div class = "uk-card-body" style = "height: 600px;">   
-                                    <h2 id = "address">Address</h2>
-                                    <p id = "description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius, cum. Nisi, distinctio optio cumque officia sint amet est fuga nulla! Libero, sint temporibus. Voluptate dolorum architecto blanditiis dignissimos ipsam explicabo?</p> 
-                                    <p id = "url">jgjahdihasj</p>   
-                                </div> 
-                            </div>
-                        </div>
-        <section>
-        </section>
+                  <div id="emptySlide0"></div>
+                  <div id="emptySlide1"></div>
+                  <div id="emptySlide2"></div>
+                  <div id="emptySlide3"></div>
+                  <div id="emptySlide4"></div>
+                  <div id="emptySlide5"></div>
+                  <div id="emptySlide6"></div>
+                  <div id="emptySlide7"></div>
+                  <div id="emptySlide8"></div>
+                  <div id="emptySlide9"></div>
+                  <div id="emptySlide10"></div>
+                  <div id="emptySlide11"></div>
+                  <div id="emptySlide12"></div>
+                  <div id="emptySlide13"></div>
+                  <div id="emptySlide14"></div>
+                  <div id="emptySlide15"></div>
+                  <div id="emptySlide16"></div>
+                  <div id="emptySlide17"></div>
+                  <div id="emptySlide18"></div>
+                  <div id="emptySlide19"></div>
+                  <div id="emptySlide20"></div>
+                  <div id="emptySlide21"></div>
+                  <div id="emptySlide22"></div>
+                  <div id="emptySlide23"></div>
+                  <div id="emptySlide24"></div>
+                  <div id="emptySlide25"></div>
+                  <div id="emptySlide26"></div>
+                  <div id="emptySlide27"></div>
+                  <div id="emptySlide28"></div>
+                  <div id="emptySlide29"></div>
+                  <div id="emptySlide30"></div>
+                    <section>
+                    </section>
 
                 <a href="#" class="slidesjs-previous slidesjs-navigation linkedItem-left"><i class="icon-large">&#8592;</i></a>
                 <a href="#" class="slidesjs-next slidesjs-navigation linkedItem-right"><i class="icon-large">&#8594;</i></a>
