--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 </head>
 
 <body style = "padding:0px;">
-   <div class = "uk-background-cover" style= "background-image: url(./assets/images/forest-landscape-minimalist-minimalism-y7125.jpg); height: 1300px; padding: 0px; margin: 0px;">
+   <div class = "uk-background-cover" id = "background-image" style= "background-image: url(./assets/images/forest-landscape-minimalist-minimalism-y7125.jpg); height: 1300px; padding: 0px; margin: 0px;">
 
         <header>
-            <nav class="navbar-expand-sm navbar-expand-lg m-0 p-0" id = "topnav"">
+            <nav class="navbar-expand-sm navbar-expand-lg m-0 p-0" id = "topnav">
                     <div class = "uk-background-cover uk-margin-remove" id = "backphoto" style = "background-image: url(./assets/images/oak-wood-header.jpg); width: 100%; height: 100px;">
                  <div class = "row my-0" style = "margin-left: 10px;"> 
                 <div class="col-lg-6 col-sm-12 col-md-12">
