--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         </nav>
         </footer>
     </div>
-    <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+    <script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
     <script src="./assets/js/jquery.slides.min.js"></script>
     <script>
      $(function() {
